add distributed caching

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "^11.0.2",
+    "@nrwl/nx-cloud": "^10.1.9",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "next": "10.0.1",
